# am-auth

./: .env.docker  .env.docker.test  .env.example  .gitignore  .replit  AM_Authentication_System.postman_collection.json  CENTRALIZED_LOGGING_README.md  CHECK_POSTGRES_CREDENTIALS.md  CLEANUP_ANALYSIS.md  COMPLETE_SYSTEM_STATUS.md  COMPLETION_REPORT.md  CONFIG_REFERENCE.md  DOCUMENTATION_INDEX.md  ENDPOINT_TEST_RESULTS.md  FEATURES_SUMMARY.md  GOOGLE_OAUTH_IMPLEMENTATION.md  GOOGLE_OAUTH_STATUS.md  MODULES_CONSOLIDATION_SUMMARY.md  PASSWORD_RESET_GUIDE.md  PASSWORD_RESET_IMPLEMENTATION.md  PASSWORD_RESET_PRODUCTION_GUIDE.md  POSTGRES_SQLALCHEMY_GUIDE.md  PROJECT_IMPLEMENTATION_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  SECURITY_ARCHITECTURE.md  SECURITY_QUICK_REFERENCE.md  SERVICES.md  TESTING.md  am-auth-ingress.yaml  docker-compose.yml  generate_token.py  generate_token.sh  load-config.sh  login_response.json  package.json  patch.json  port_mapping_explained.txt  portfolio_values.yaml  pyproject.toml  (+9 more)
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
am/: .env  .env.docker  CONFIGURATION_BEFORE_AFTER.md  CONFIG_INDEX.md  CONFIG_MANAGEMENT.md  CONFIG_REFERENCE.md  ENV_CONFIG.md  ENV_DOCKER_CONSOLIDATION.md  PROJECT_COMPLETION.md  REFACTORING_SUMMARY.md  SERVICE_URL_CONFIG.md  VARIABLES_INVENTORY.md  docker-compose-business.yml  docker-compose.yml  docker-compose.yml.backup  infra.yml  load-config.sh
am copy/: .env.docker  docker-compose.yml
am-api-gateway/: README.md  main.py  requirements.txt
am-auth-tokens/: .gitignore  Dockerfile  main.py  requirements.txt
am-diagnostic-web/: .gitignore  Dockerfile  nginx.conf  pubspec.yaml
am-python-internal-service/: Dockerfile  requirements.txt
am-tests/: DIAGNOSTICS_GUIDE.md  requirements.txt
am-user-management/: Dockerfile  main.py
am_diagnostic_ui/: Dockerfile  README.md  nginx.conf
config/: app.env  build.env  logging.env  security.env
docs/: ARCHITECTURE.md  (+15 more)
(+345 files in other folders)
